--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=moodrecommendation
-spring.datasource.url=jdbc:mysql://localhost:3306/Mr_db
-spring.datasource.username=root
-spring.datasource.password=nandhu
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-server.port=8081
+server.port=${PORT:8081}
