--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -3,16 +3,19 @@ FROM maven:3.9.6-eclipse-temurin-17 AS builder
 
 WORKDIR /app
 
-# Copy everything inside demo
+# Copy everything (because root is already demo)
 COPY . .
 
+# Build jar
 RUN mvn clean package -DskipTests
 
-# ---------- RUNTIME STAGE ----------
+
+# ---------- RUN STAGE ----------
 FROM eclipse-temurin:17-jdk-alpine
 
 WORKDIR /app
 
+# Copy jar from builder
 COPY --from=builder /app/target/demo-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8081
