--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,23 +1,20 @@
-# ---------- BUILD STAGE ----------
+# Build stage
 FROM maven:3.9.6-eclipse-temurin-17 AS builder
 
 WORKDIR /app
 
-# Copy everything (because root is already demo)
+# Copy everything inside demo
 COPY . .
 
-# Build jar
 RUN mvn clean package -DskipTests
 
-
-# ---------- RUN STAGE ----------
+# Run stage
 FROM eclipse-temurin:17-jdk-alpine
 
 WORKDIR /app
 
-# Copy jar from builder
 COPY --from=builder /app/target/demo-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8081
 
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
